Log restore working again including delete, edit, create and merge

--- a/DanceCalc/m4d/Views/Admin/Index.cshtml
+++ b/DanceCalc/m4d/Views/Admin/Index.cshtml
@@ -5,4 +5,7 @@
 
 <h2>Administrator Console</h2>
 
-@Html.ActionLink("Seed the Datbase", "SeedDatabase")
+<ul>
+    <li>@Html.ActionLink("Restore the Datbase", "RestoreDatabase")</li>
+    <li>@Html.ActionLink("Seed the Datbase", "SeedDatabase")</li>
+</ul>
