--- a/DanceCalc/m4d/Views/Home/Index.cshtml
+++ b/DanceCalc/m4d/Views/Home/Index.cshtml
@@ -33,5 +33,6 @@
         a multitude of streaming and mp3 purchase services.  The first baby step for that is the songs section of this website, where I've pulled together a bunch of that information
         from a number of different sources, merged and edited, so that I've got at least a start of a database of song title/artist/albums associated with various dances.  In the long run I would like this
         to be both crowd sourced and linked to actual music, but for now enjoy the browsing.</p>
+        <p><a class="btn btn-default" href="/Song">Browse the Song Database&raquo;</a></p>
     </div>
 </div>
