--- a/DanceCalc/m4d/Views/Song/SongItems.cshtml
+++ b/DanceCalc/m4d/Views/Song/SongItems.cshtml
@@ -25,7 +25,7 @@
         @foreach (var user in Model.ModifiedBy)
         {
             @separator;
-            @user.UserName;
+            @user.ApplicationUser.UserName;
             separator = ", ";                         
         }
     </p>
