Get album ordering working + automatically push xbox to the top of the list when matched.

--- a/DanceCalc/m4d/Views/Song/EditCore.cshtml
+++ b/DanceCalc/m4d/Views/Song/EditCore.cshtml
@@ -206,6 +206,9 @@
                             @Html.ValidationMessageFor(model => model.Albums[currentAlbum].Publisher)
                         </div>
                     </td>
+                    <td>
+                        @Html.HiddenFor(model => Model.Albums[currentAlbum].Index)
+                    </td>
                 </tr>
             }
 
