--- a/DanceCalc/m4d/Views/Admin/Index.cshtml
+++ b/DanceCalc/m4d/Views/Admin/Index.cshtml
@@ -8,7 +8,9 @@
 <ul>
     <li>@Html.ActionLink("Restore the Datbase", "RestoreDatabase")</li>
     <li>@Html.ActionLink("Seed the Datbase", "SeedDatabase")</li>   
+    <li>@Html.ActionLink("Rerun seed function", "Reseed")</li>
     <li>@Html.ActionLink("Backup the Datbase", "BackupDatabase")</li>
+    <li>@Html.ActionLink("Update Purchase Info", "UpdatePurchase")</li>
 </ul>
 
 <hr />
