--- a/DanceCalc/m4d/Views/Song/EditCore.cshtml
+++ b/DanceCalc/m4d/Views/Song/EditCore.cshtml
@@ -238,6 +238,7 @@
     <hr />
             
     <p>
+        <input type="hidden" name="filter" value="@ViewBag.SongFilter" />
         <input type="submit" value="@ViewBag.Submit" class="btn btn-default" />
     </p>    
 }
