--- a/DanceCalc/m4d/Views/Song/Merge.cshtml
+++ b/DanceCalc/m4d/Views/Song/Merge.cshtml
@@ -125,10 +125,14 @@
 }
 </table>
 
+<hr/>
 @Html.Hidden("SongIds",Model.SongIds)
-    
-<input name="Commit" type="submit" value="Okay" />
-<input name="Commit" type="submit" value="Cancel" />
+
+<input type="hidden" name="filter" value="@ViewBag.SongFilter" />
+<input name="Commit" type="submit" value="Okay" class="btn btn-small btn-primary" />
+<input name="Commit" type="submit" value="Cancel" class="btn btn-small btn-primary" />
+
+@Html.ActionLink("Back to List", (string)ViewBag.SongFilter.Action, new { filter = ViewBag.SongFilter }, new { @class = "btn btn-small btn-primary", role = "button" })
 }
 
 @section Scripts {
