--- a/DanceCalc/m4d/Views/Song/XboxSearch.cshtml
+++ b/DanceCalc/m4d/Views/Song/XboxSearch.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "XboxSearch";
 }
 
-<h2>XboxSearch</h2>
+<h2>XboxSearch: @Model.Title</h2>
 
 <div>
     <h4>Status = @ViewBag.Status</h4>
@@ -18,6 +18,7 @@
     { 
         <input type="hidden" name="id" value="@Model.SongId" />
         <input type="text" name="search" value="@ViewBag.Search" />
+        <input type="hidden" name="filter" value="@ViewBag.SongFilter"
         <input type="submit" value="Retry" />
     }            
 }
@@ -70,7 +71,7 @@ else {
                 }
 
 
-                @using (Html.BeginForm("ChooseXbox","Song",new { songId = Model.SongId, name = track.Name, album = track.Album.Name, artist = track.Artists[0].Artist.Name, trackId = track.Id, alternateId = altId, duration = track.Duration, trackNum = track.TrackNumber, genre=track.Genres[0] }))
+                @using (Html.BeginForm("ChooseXbox","Song",new { songId = Model.SongId, name = track.Name, album = track.Album.Name, artist = track.Artists[0].Artist.Name, trackId = track.Id, alternateId = altId, duration = track.Duration, trackNum = track.TrackNumber, genre=track.Genres[0], filter=ViewBag.SongFilter }))
                 {
                     @Html.AntiForgeryToken()
                     <input type="submit" value="CHOOSE" />
@@ -86,8 +87,8 @@ else {
     </div>
 }
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.SongId }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Edit", "Edit", new { id = Model.SongId, filter = ViewBag.SongFilter }, new { @class = "btn btn-small btn-default", role = "button" })
+    @Html.ActionLink("Back to List", (string)ViewBag.SongFilter.Action, new { filter = ViewBag.SongFilter }, new { @class = "btn btn-small btn-primary", role = "button" })
 </p>
 
 @Html.AntiForgeryToken()
