--- a/DanceCalc/m4d/Views/Song/XboxSearch.cshtml
+++ b/DanceCalc/m4d/Views/Song/XboxSearch.cshtml
@@ -18,7 +18,7 @@
     { 
         <input type="hidden" name="id" value="@Model.SongId" />
         <input type="text" name="search" value="@ViewBag.Search" />
-        <input type="hidden" name="filter" value="@ViewBag.SongFilter"
+        <input type="hidden" name="filter" value="@ViewBag.SongFilter"/>
         <input type="submit" value="Retry" />
     }            
 }
