Factor out models part 2: Handle SongDetails and fix some bugs

--- a/DanceCalc/m4d/Views/Song/Details.cshtml
+++ b/DanceCalc/m4d/Views/Song/Details.cshtml
@@ -36,7 +36,7 @@
     {
         <div id="songLog" class="col-md-6">
             <br />
-            @Html.Partial("SongItems", Model.Song)
+            @Html.Partial("SongItems", Model.Properties.OrderBy(sp => sp.Id))
         </div>
     }
 </div>
