--- a/DanceCalc/m4d/Views/Song/Merge.cshtml
+++ b/DanceCalc/m4d/Views/Song/Merge.cshtml
@@ -120,7 +120,7 @@
         @{i = 0;}
         @foreach (var item in Model.Songs)
         {
-            <td>@Html.Partial("SongItems",item.Song)</td>
+            <td>@Html.Partial("SongItems", item.Properties.OrderBy(sp => sp.Id))</td>
             i = i + 1;
         }
     </tr>
