--- a/DanceCalc/m4d/Views/Song/SongItems.cshtml
+++ b/DanceCalc/m4d/Views/Song/SongItems.cshtml
@@ -1,4 +1,4 @@
-﻿@model m4d.Models.Song
+﻿@model IEnumerable<m4d.Models.SongProperty>
 
 @if (User.IsInRole("showDiagnostics"))
 {
@@ -8,25 +8,13 @@
             <th>Name</th>
             <th>Value</th>
         </tr>
-    @foreach (var logItem in Model.SongProperties.OrderBy(sp => sp.Id))
+    @foreach (var item in Model)
     {
         <tr>
-            <td>@Html.DisplayFor(modelItem => logItem.Id)</td>
-            <td>@Html.DisplayFor(modelItem => logItem.Name)</td>
-            <td>@Html.DisplayFor(modelItem => logItem.Value)</td>
+            <td>@Html.DisplayFor(modelItem => item.Id)</td>
+            <td>@Html.DisplayFor(modelItem => item.Name)</td>
+            <td>@Html.DisplayFor(modelItem => item.Value)</td>
         </tr>
     }
     </table>
-
-    <br />
-    <p>
-        <b>Users: </b>
-        @{string separator = "";}
-        @foreach (var user in Model.ModifiedBy)
-        {
-            @separator;
-            @user.ApplicationUser.UserName;
-            separator = ", ";                         
-        }
-    </p>
 }
