Factor out models part 6: Create the new library and do the actual move

--- a/DanceCalc/m4d/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/DanceCalc/m4d/Views/Account/ExternalLoginConfirmation.cshtml
@@ -1,4 +1,4 @@
-﻿@model m4d.Models.ExternalLoginConfirmationViewModel
+﻿@model m4dModels.ExternalLoginConfirmationViewModel
 @{
     ViewBag.Title = "Register";
 }
