--- a/DanceCalc/m4d/Views/Song/SongItems.cshtml
+++ b/DanceCalc/m4d/Views/Song/SongItems.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<m4d.Models.SongProperty>
+﻿@model IEnumerable<m4dModels.SongProperty>
 
 @if (User.IsInRole("showDiagnostics"))
 {
