--- a/DanceCalc/m4d/Views/Account/_ChangePasswordPartial.cshtml
+++ b/DanceCalc/m4d/Views/Account/_ChangePasswordPartial.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Microsoft.AspNet.Identity
-@model m4d.Models.ManageUserViewModel
+@model m4dModels.ManageUserViewModel
 
 <p>You're logged in as <strong>@User.Identity.GetUserName()</strong>.</p>
 
