--- a/DanceCalc/m4d/Views/Account/_SetPasswordPartial.cshtml
+++ b/DanceCalc/m4d/Views/Account/_SetPasswordPartial.cshtml
@@ -1,4 +1,4 @@
-﻿@model m4d.Models.ManageUserViewModel
+﻿@model m4dModels.ManageUserViewModel
 
 <p class="text-info">
     You do not have a local username/password for this site. Add a local
