--- a/DanceCalc/m4d/Views/Song/Index.cshtml
+++ b/DanceCalc/m4d/Views/Song/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model PagedList.IPagedList<m4d.Models.Song>
+﻿@model PagedList.IPagedList<m4dModels.Song>
 @using PagedList.Mvc;
 
 <link href="/Content/PagedList.css" rel="stylesheet" type="text/css" />
