--- a/DanceCalc/m4d/Views/Song/Merge.cshtml
+++ b/DanceCalc/m4d/Views/Song/Merge.cshtml
@@ -1,4 +1,4 @@
-﻿@model m4d.ViewModels.SongMerge
+﻿@model m4dModels.SongMerge
 
 @{
     ViewBag.Title = "Merge";
@@ -20,7 +20,7 @@
             i = i + 1;
         }
     </tr>
-    @foreach (m4d.ViewModels.SongPropertyMerge spm in Model.Properties)
+    @foreach (m4dModels.SongPropertyMerge spm in Model.Properties)
     {
         <tr>
             <th>@spm.Name</th>
@@ -92,7 +92,7 @@
     <tr><th>Dances</th><td>
         @{
             int idx = 0;
-            foreach (m4d.ViewModels.DanceMerge dm in Model.Ratings)
+            foreach (m4dModels.DanceMerge dm in Model.Ratings)
             {
                 string label = dm.DanceName + " (" + dm.Weight.ToString() + ")";
                 string name = "Dance-" + dm.DanceId + "-" + dm.Weight;
