--- a/DanceCalc/m4d/Views/Song/DetailsCore.cshtml
+++ b/DanceCalc/m4d/Views/Song/DetailsCore.cshtml
@@ -103,7 +103,7 @@
                 </div>
                 // TODO: Purchase info should eventually map to links, this variation is just
                 //  for diagnostic purposes
-                IList<string> info = album.GetPurcahseInfo();
+                IList<string> info = album.GetPurchaseInfo();
                 foreach (string p in info)
                 {
                     <text>@p </text>
