--- a/DanceCalc/m4d/Views/Account/Manage.cshtml
+++ b/DanceCalc/m4d/Views/Account/Manage.cshtml
@@ -1,4 +1,4 @@
-﻿@using m4d.Models;
+﻿@using m4dModels;
 @using Microsoft.AspNet.Identity;
 @{
     ViewBag.Title = "Manage Account";
@@ -18,12 +18,21 @@
             @Html.Partial("_SetPasswordPartial")
         }
 
-        <section id="externalLogins">
-            @Html.Action("RemoveAccountList")
-            @Html.Partial("_ExternalLoginsListPartial", new { Action = "LinkLogin", ReturnUrl = ViewBag.ReturnUrl })
-        </section>
+@*
+    <section id="externalLogins">
+        @Html.Action("RemoveAccountList")
+        @Html.Partial("_ExternalLoginsListPartial", new { Action = "LinkLogin", ReturnUrl = ViewBag.ReturnUrl })
+    </section>
+*@
     </div>
 </div>
+
+<div class="row">
+    <div class="col-md-12">
+        @Html.ActionLink("Show songs I've modified", "FilterUser", "Song", new { user=@User.Identity.GetUserName()}, null)
+    </div>
+</div>
+
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 }
